--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
   <script src="/clock.js"></script>  
    <script src="/greeting.js"></script>
    <script src="/todo.js"></script>
+   <script src="/bg.js"></script>
+
 
 
 </body>
